Sets box shadow for avatar

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -14,7 +14,7 @@
     box-shadow: 0;
     opacity: 1;
     &:hover {
-        box-shadow: .15rem .15rem .3rem .1rem rgba(0, 0, 0, 0.18);
+        box-shadow: 0 0 .5rem .15rem rgba(0, 0, 0, 0.4);
         opacity: .8;
     }
 }
