Implements nav bar in default
* Removes tagline from default layout and head.html
* Adds navigation to default layout
* Adds nav setting within _config.yml
* Improves hierarchic structure of _config.yml
* Adds nav styles to _masthead.scss

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,16 @@ layout: compress
       <header class="masthead">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
         </h3>
+        {% if site.nav %}
+        <nav>
+            <ul>
+                {% for item in site.nav %}
+                <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+                {% endfor %}
+            </ul>
+        </nav>
+        {% endif %}
       </header>
 
       <main>
