--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -25,7 +25,7 @@
 }
 
 nav.homenav {
-    margin: 0 auto;
+    margin: .7rem auto;
     text-align: center;
 
     ul {
@@ -37,7 +37,7 @@ nav.homenav {
 
             a {
             color: #515151;
-            font-size: .8rem;
+            font-size: .85rem;
             padding: 0 0.75em;
             }
         }
