--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -25,6 +25,7 @@
 
 // Meta data line below post title
 .post-date {
+  font-size: .9rem;
   display: block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
