--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -11,20 +11,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 h2 {
   margin-top: 1rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
-h3 {
-  margin-top: 1.5rem;
-  font-size: 1.25rem;
-}
-
-h4, h5, h6 {
+h3, h4, h5, h6 {
   margin-top: 1rem;
   font-size: 1rem;
 }
