Makes footnote ref links a little smaller

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -96,6 +96,10 @@ a[href^="#fnref:"] {
   font-weight: bold;
 }
 
+.footnote-ref {
+    font-size: .85rem;
+}
+
 // List of footnotes
 .footnotes {
   margin-top: 2rem;
