Resets space between homepage header and nav

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -3,6 +3,7 @@
 .header-home {
     display: block;
     margin-top: 8rem;
+    margin-bottom: 1.6rem;
     text-align: center;
 }
 
@@ -25,7 +26,6 @@
 }
 
 nav.homenav {
-    margin: .7rem auto;
     text-align: center;
 
     ul {
