--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -13,6 +13,7 @@
       text-decoration: none;
 
       ul {
+          font-family: $root-font-family;
           list-style: none;
 
           li {
