--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -32,6 +32,19 @@
   color: #9a9a9a;
 }
 
+.post-excerpt {
+    font-family: $body-font-family;
+}
+
+.more {
+    display: block;
+    font-family: $body-font-family;
+    font-style: italic;
+    font-size: 1rem;
+    text-decoration: none;
+    margin-top: .1rem;
+}
+
 
 // Related posts
 .related {
