--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,12 +13,13 @@ $blue: #268bd2;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+$root-font-family: "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
 $root-font-size: 16px;
 $root-line-height: 1.5;
 
 $body-color: #515151;
 $body-bg: #fff;
+$body-font-family: "Linux Libertine O", "Georgia", serif;
 $link-color: $blue;
 
 $border-color: #e5e5e5;
@@ -26,5 +27,5 @@ $border-color: #e5e5e5;
 $large-breakpoint: 38em;
 $large-font-size: 20px;
 
-$code-font-family: Menlo, Monaco, "Courier New", monospace;
+$code-font-family: "Source Code Pro", "Courier New", monospace;
 $code-color: #8b4500;
