--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,26 +1,26 @@
 @font-face {
     font-family: "Linux Libertine O";
-    src: url("../assets/fonts/LinLibertine_R.otf")
+    src: url("../fonts/LinLibertine_R.otf")
 }
 
 @font-face {
     font-family: "Linux Libertine O";
     font-weight: bold;
-    src: url("../assets/fonts/LinLibertine_RB.otf");
+    src: url("../fonts/LinLibertine_RB.otf");
 }
 
 @font-face {
     font-family: "Linux Libertine O";
     font-style: italic;
-    src: url("../assets/fonts/LinLibertine_RI.otf");
+    src: url("../fonts/LinLibertine_RI.otf");
 }
 
 @font-face {
     font-family: "Source Code Pro";
-    src: url("../assets/fonts/SourceCodePro-Regular.otf");
+    src: url("../fonts/SourceCodePro-Regular.otf");
 }
 
 @font-face {
     font-family: "Fira Sans";
-    src: url("../assets/fonts/FiraSans-Regular.otf");
+    src: url("../fonts/FiraSans-Regular.otf");
 }
