Tweaks to styles of code, a and footnote-ref
* Redoes much of the inline code style.
* Changes color of hyperlinks.
* Changes color of footnote-ref.

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -100,8 +100,9 @@ a[href^="#fnref:"] {
 
 .footnote-ref {
     font-size: .85rem;
-    color: #9da7ae;
+    color: $body-color;
     margin-left: .08rem;
+    text-decoration: none;
 }
 
 .footnote-back {
