--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -9,10 +9,10 @@ pre {
 }
 
 code {
-  padding: .25em .5em;
-  font-size: 78%;
+  padding: 0 .2em;
+  font-size: 84%;
   color: $code-color;
-  background-color: #f9f9f9;
+  background-color: #f6f6f6;
   border-radius: 3px;
 }
 
