--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,7 +9,7 @@ $orange: #d28445;
 $yellow: #f4bf75;
 $green: #90a959;
 $cyan: #75b5aa;
-$blue: #268bd2;
+$blue: #0a79b6;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
@@ -28,4 +28,4 @@ $large-breakpoint: 38em;
 $large-font-size: 20px;
 
 $code-font-family: "Source Code Pro", "Courier New", monospace;
-$code-color: #8b4500;
+$code-color: $body-color;
