Implements bigfoot.js
* Adjusts code style to match background color of footnote ref
* Adds bigfoot.min.js and jquery-3.3.1.min.js
* Puts script tags in head.html
* Adds bigfoot stylesheet

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -12,7 +12,7 @@ code {
   padding: 0 .2em;
   font-size: 84%;
   color: $code-color;
-  background-color: #f6f6f6;
+  background-color: $code-bg-color;
   border-radius: 3px;
 }
 
