--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -29,4 +29,5 @@
 @import "pagination";
 @import "message";
 @import "homepage";
-@import "social-links"
+@import "social-links";
+@import "bigfoot"
