Adds Fira Sans Bold and Light

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -24,3 +24,15 @@
     font-family: "Fira Sans";
     src: url("../fonts/FiraSans-Regular.otf");
 }
+
+@font-face {
+    font-family: "Fira Sans";
+    font-weight: bold;
+    src: url("../fonts/FiraSans-Medium.otf");
+}
+
+@font-face {
+    font-family: "Fira Sans";
+    font-weight: light;
+    src: url("../fonts/FiraSans-Light.otf");
+}
