--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -4,7 +4,6 @@
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
-  font-weight: 600;
   line-height: 1.25;
   color: #313131;
   text-rendering: optimizeLegibility;
@@ -12,16 +11,20 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 1.8rem;
+  font-weight: bold;
 }
 
 h2 {
   margin-top: 1rem;
   font-size: 1.2rem;
+  font-weight: bold;
 }
 
 h3, h4, h5, h6 {
+  color: #848484;
+  font-weight: lighter;
   margin-top: 0.5rem;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
 }
 
 p {
