--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -29,4 +29,4 @@ $large-font-size: 20px;
 
 $code-font-family: "Source Code Pro", "Courier New", monospace;
 $code-color: $body-color;
-$code-bg-color: rgba(110, 110, 110, 0.2);
+$code-bg-color: #f8f8f8;
