--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
 
   <title>
     {% if page.title == "Home" %}
