--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,10 +17,10 @@ $root-font-family: "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-seri
 $root-font-size: 16px;
 $root-line-height: 1.5;
 
-$body-color: #515151;
+$body-color: #313131;
 $body-bg: #fff;
 $body-font-family: "Linux Libertine O", "Georgia", serif;
-$link-color: $blue;
+$link-color: #7e7e7e;
 
 $border-color: #e5e5e5;
 
@@ -28,5 +28,5 @@ $large-breakpoint: 38em;
 $large-font-size: 20px;
 
 $code-font-family: "Source Code Pro", "Courier New", monospace;
-$code-color: $body-color;
+$code-color: $link-color;
 $code-bg-color: #f8f8f8;
