Style changes to links and post-lede
* Removes text-decoration from certain links
* Removes post-lede font-style

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -41,6 +41,7 @@ nav.homenav {
             font-size: .85rem;
             padding: 0 0.75em;
             font-weight: bold;
+            text-decoration: none;
             }
         }
     }
