--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -24,6 +24,7 @@
                   color: #515151;
                   font-weight: bold;
                   font-size: .75rem;
+                  text-decoration: none;
               }
           }
       }
@@ -39,6 +40,7 @@
 
   a {
     color: inherit;
+    text-decoration:none;
   }
 
   small {
