Changes default header font to Fira Sans Semibold

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -22,11 +22,5 @@
 
 @font-face {
     font-family: "Fira Sans";
-    src: url("../fonts/FiraSans-Regular.otf");
-}
-
-@font-face {
-    font-family: "Fira Sans";
-    font-weight: bold;
-    src: url("../fonts/FiraSans-Medium.otf");
+    src: url("../fonts/FiraSans-SemiBold.otf");
 }
