--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,14 +13,14 @@ $blue: #0a79b6;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+$root-font-family: "Fira Sans", "Helvetica Neue", Arial, sans-serif;
 $root-font-size: 16px;
 $root-line-height: 1.5;
 
 $body-color: #313131;
 $body-bg: #fff;
 $body-font-family: "Linux Libertine O", "Georgia", serif;
-$link-color: #7e7e7e;
+$link-color: #b14444;
 
 $border-color: #e5e5e5;
 
@@ -29,4 +29,5 @@ $large-font-size: 20px;
 
 $code-font-family: "Source Code Pro", "Courier New", monospace;
 $code-color: $link-color;
-$code-bg-color: #f8f8f8;
+$code-bg-color: #f9f9f9;
+$code-border-color: #f0f0f0;
