--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -14,6 +14,7 @@ code {
   color: $code-color;
   background-color: $code-bg-color;
   border-radius: 3px;
+  border: 1px solid $code-border-color;
 }
 
 pre {
