--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -39,6 +39,7 @@ nav.homenav {
             a {
             color: #515151;
             font-size: .85rem;
+            font-weight: bold;
             padding: 0 0.75em;
             text-decoration: none;
             &:hover {
