--- a/_sass/_social-links.scss
+++ b/_sass/_social-links.scss
@@ -19,7 +19,7 @@
 
     &:hover {
       .icon {
-          fill: rgb(110, 110, 110)
+          fill: $link-color;
       }
     }
     &:hover:before {
