--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,11 +5,11 @@ layout: default
 <article class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date: '%B %d, %Y' }}</time>
-  <span class="post-lede">{{ page.lede | textilize }}</span>
+  <p class="post-lede">{{ page.lede | textilize }}</p>
   <hr>
   {{ content }}
 </article>
-
+<hr>
 {% if site.related_posts != empty %}
 <aside class="related">
   <h3>Related posts</h3>
