--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,7 +5,7 @@
 .masthead {
   padding-top:    1rem;
   padding-bottom: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 
   nav {
       display: inline-block;
@@ -23,6 +23,7 @@
               a {
                   color: #515151;
                   font-size: .75rem;
+                  font-weight: bold;
                   text-decoration: none;
                   &:hover {
                       color: #b14444;
@@ -34,11 +35,11 @@
 }
 
 .masthead-title {
+  font-size: 1rem;
   display: inline-block;
-  font-weight: bold;
   margin-top: 0;
   margin-bottom: 0;
-  color: $gray-4;
+  color: #313131;
 
   a {
     color: inherit;
