--- a/_sass/_message.scss
+++ b/_sass/_message.scss
@@ -6,6 +6,16 @@
 .message {
   margin-bottom: 1rem;
   padding: 1rem;
-  color: #717171;
-  background-color: #f9f9f9;
+  color: #8a8a8a;
+  background-color: $code-bg-color;
+  font-family: $root-font-family;
+  font-size: 0.75rem;
+  border-radius: 3px;
+  border: 1px solid $code-border-color;
+  strong {
+      font-size: 0.75rem;
+  }
+  code {
+      background-color: $code-bg-color*0.97;
+  }
 }
