--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -37,7 +37,7 @@ nav.homenav {
             display: inline-block;
 
             a {
-            color: #515151;
+            color: $body-color;
             font-size: .85rem;
             font-weight: bold;
             padding: 0 0.75em;
