--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/assets/images/apple-touch-icon-precomposed.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml">
   <script type="text/javascript" src="{{ site.baseurl }}/assets/js/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/assets/js/bigfoot.min.js"></script>
