Eliminates direct reference to font

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -22,7 +22,7 @@
 .page-title,
 .post-title {
   margin-top: 0;
-  font-family: "Fira Sans Light";
+  font-family: $root-font-family;
 }
 
 // Meta data line below post title
