--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -23,13 +23,14 @@
 .hometitle {
     margin: 1.5rem auto;
     font-size: 1.5rem;
+    font-family: $masthead-font-family;
 }
 
 nav.homenav {
     text-align: center;
 
     ul {
-        font-family: $root-font-family;
+        font-family: $masthead-font-family;
         list-style: none;
         padding: 0;
 
