--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,14 +13,16 @@ $blue: #0a79b6;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: "Fira Sans", "Helvetica Neue", Arial, sans-serif;
+$root-font-family: "Libertinus Sans", "Helvetica Neue", Arial, sans-serif;
 $root-font-size: 16px;
 $root-line-height: 1.5;
 
 $body-color: #313131;
 $body-bg: #fff;
-$body-font-family: "Linux Libertine O", "Georgia", serif;
+$body-font-family: "Libertinus Serif", "Georgia", serif;
 $link-color: #b14444;
+
+$masthead-font-family: "Fira Sans Light", "Helvetica Neue", Arial, sans-serif;
 
 $border-color: #e5e5e5;
 
