--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -38,6 +38,10 @@ pre code {
   background-color: #f9f9f9;
   border-radius: .25rem;
 
+  code {
+      border: none;
+  }
+
   pre {
     margin-bottom: 0;
     overflow-x: auto;
