Changes font for message class

--- a/_sass/_message.scss
+++ b/_sass/_message.scss
@@ -8,10 +8,10 @@
   padding: 1rem;
   color: #8a8a8a;
   background-color: $code-bg-color;
-  font-family: $root-font-family;
   font-size: 0.9rem;
   border-radius: 3px;
   border: 1px solid $code-border-color;
+  line-height: 1.5;
   strong {
       font-size: 0.9rem;
   }
