--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,12 +24,13 @@
       <main>
         {{ content }}
       </main>
-
+{% if page.nofooter == nil %}
       <footer class="footer">
         <small>
           &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
         </small>
       </footer>
+{% endif %}
     </div>
   </body>
 </html>
