--- a/_sass/_social-links.scss
+++ b/_sass/_social-links.scss
@@ -74,3 +74,18 @@
       transition: all ease-in-out .2s;
   }
 }
+
+.icon-mastodon {
+    position: relative;
+    top: 3px;
+}
+
+.icon-github {
+    position: relative;
+    top: 1px;
+}
+
+.icon-mail {
+    position: relative;
+    top: 2px;
+}
