--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -107,6 +107,8 @@ a[href^="#fnref:"] {
 .footnote-back {
     margin-left: .2rem;
     text-decoration: none;
+    position: relative;
+    top: 0.1rem;
 }
 
 // List of footnotes
