--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,13 +24,15 @@
       <main>
         {{ content }}
       </main>
-{% if page.nofooter == nil %}
+
+{% unless page.nofooter %}
       <footer class="footer">
         <small>
           &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
         </small>
       </footer>
-{% endif %}
+{% endunless %}
+
     </div>
   </body>
 </html>
