--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,11 @@ layout: default
   <hr>
   {{ content }}
 </article>
-<hr>
+
+{% unless page.nocomment %}
+  <a class="commentbyemail" href="mailto:tgdnt@pm.me?subject={{ page.title | uri_escape }}">Discuss this post via email</a>
+{% endunless %}
+
 {% if site.related_posts != empty %}
 <aside class="related">
   <h3>Related posts</h3>
