Changes to bigfoot footnote style
* Lowers size of margin-bottom within footnote.

--- a/_sass/_bigfoot.scss
+++ b/_sass/_bigfoot.scss
@@ -580,6 +580,9 @@ $button-transition-properties:      background-color !default;
   img { max-width: 100%; }
   *:last-child { margin-bottom: 0 !important; }
   *:first-child { margin-top: 0 !important; }
+  * {
+      margin-bottom: 0.5rem;
+  }
 }
 
 
