--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 </article>
 
 {% unless page.nocomment %}
-  <a class="commentbyemail" href="mailto:{{ site.comment_to_email }}?subject={{ page.title | uri_escape }}">Discuss this post via email</a>
+<p class="commentbyemail"><a href="mailto:{{ site.comment_to_email }}?subject={{ page.title | uri_escape }}">Discuss this post via email</a></p>
 {% endunless %}
 
 {% unless site.no_related_posts or page.no_related_posts %}
