--- a/_sass/_bigfoot.scss
+++ b/_sass/_bigfoot.scss
@@ -580,7 +580,7 @@ $button-transition-properties:      background-color !default;
   img { max-width: 100%; }
   *:last-child { margin-bottom: 0 !important; }
   *:first-child { margin-top: 0 !important; }
-  * {
+  p {
       margin-bottom: 0.5rem;
   }
 }
