Increases lede font size

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -32,12 +32,14 @@
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
+  line-height: 1.5;
 }
 
 .post-lede {
     font-family: $body-font-family;
     text-decoration: none;
     color: $body-color;
+    font-size: 1.1rem;
 }
 
 .more {
