--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,10 @@ layout: default
 <article class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date: '%B %d, %Y' }}</time>
+  {% unless page.noledeinside %}
   <p class="post-lede">{{ page.lede | textilize }}</p>
   <hr>
+  {% endunless %}
   {{ content }}
 </article>
 {% unless page.nocomment %}
