Makes footnotes list optional

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,4 +25,9 @@
 		   }
 	 );
   </script>
+  {% if page.nofootnotes %}
+  <style>
+      .footnotes { display: none; }
+  </style>
+  {% endif %}
 </head>
