Implements aside element
* Makes aside element work like message class
* Resolves style conflict with Bigfoot footnotes
* Removes _message.scss and incorporates style into _type.scss

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -153,3 +153,22 @@ a[href^="#fnref:"] {
         width: 684px;
     }
 }
+
+// MESSAGE CLASS MADE INTO ASIDE
+
+aside {
+    margin-bottom: 1rem;
+    padding: 1rem;
+    color: #8a8a8a;
+    background-color: $code-bg-color;
+    font-size: 0.9rem;
+    border-radius: 3px;
+    border: 1px solid $code-border-color;
+    line-height: 1.5;
+    strong {
+        font-size: 0.9rem;
+    }
+    code {
+        background-color: #efefef;
+    }
+}
