--- a/_sass/_bigfoot.scss
+++ b/_sass/_bigfoot.scss
@@ -21,7 +21,7 @@
 
 // STYLES
 $popover-width:                         22em !default;                           // Ideal width of the popover
-$popover-max-width:                     90% !default;                            // Best as a % to accommodate smaller viewports
+$popover-max-width:                     70% !default;                            // Best as a % to accommodate smaller viewports
 $popover-max-height:                    15em !default;                           // Maximum size of the content area
 $popover-color-background:              rgb(250, 250, 250) !default;             // Color of the popover background
 $popover-border-radius:                 0.5em !default;                          // Radius of the corners of the popover
@@ -370,7 +370,7 @@ $button-transition-properties:      background-color !default;
   // POSITIONING
   position: absolute;
   z-index: $popover-z-index;
-  top: 0; left: 0;
+  top: 5px; left: 0;
 
   // DISPLAY AND SIZING
   display: inline-block;
@@ -399,6 +399,9 @@ $button-transition-properties:      background-color !default;
   // TRANSFORMS
   transform: $popover-initial-transform-state;
   transform-origin: $popover-initial-transform-origin;
+
+  // ELIMINATES PADDING INHERINTED FROM ASIDE ELEMENT
+  padding: 0;
 
   &.is-positioned-top {
     top: auto;
