--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,7 +26,7 @@ $masthead-font-family: "Fira Sans Light", "Helvetica Neue", Arial, sans-serif;
 
 $border-color: #e5e5e5;
 
-$large-breakpoint: 38em;
+$large-breakpoint: 38rem;
 $large-font-size: 20px;
 
 $code-font-family: "Source Code Pro", "Courier New", monospace;
