--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,7 @@
       </main>
 
 {% unless page.nofooter %}
-      <footer class="footer">
-        <small>
-          &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
-        </small>
-      </footer>
+    {% include footer.html %}
 {% endunless %}
 
     </div>
