--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -49,10 +49,8 @@ dd {
 
 hr {
   position: relative;
-  margin: 1.5rem 0;
-  border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
+  margin-bottom: 1.5rem;
+  border: 1px solid $code-border-color;
 }
 
 abbr {
@@ -157,6 +155,7 @@ a[href^="#fnref:"] {
 // MESSAGE CLASS MADE INTO ASIDE
 
 aside {
+    font-family: $body-font-family;
     margin-bottom: 1rem;
     padding: 1rem;
     color: #8a8a8a;
@@ -164,6 +163,7 @@ aside {
     font-size: 0.9rem;
     border-radius: 3px;
     border: 1px solid $code-border-color;
+    border-radius: 0.5em;
     line-height: 1.5;
     strong {
         font-size: 0.9rem;
