--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -34,11 +34,12 @@ body {
 // No `:visited` state is required by default (browsers will use `a`)
 a {
   color: $link-color;
+  text-decoration: none;
 
   // `:focus` is linked to `:hover` for basic accessibility
   &:hover,
   &:focus {
-    text-decoration: none;
+    text-decoration: underline;
   }
 
   strong {
