--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date: '%B %d, %Y' }}</time>
   {% unless page.noledeinside %}
-  <p class="post-lede">{{ page.lede | markdownify }}</p>
+  <section class="post-lede">{{ page.lede | markdownify }}</section>
   <hr>
   {% endunless %}
   {{ content }}
