--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -47,6 +47,17 @@ a {
   }
 }
 
+p a {
+    color: $body-color;
+    text-decoration: none;
+    border-bottom: 1px dotted $body-color;
+    &:hover,
+    &:focus {
+        text-decoration: none;
+        border-bottom: 1px solid $body-color;
+    }
+}
+
 img {
   display: block;
   max-width: 100%;
