--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -2,22 +2,41 @@
 
 .post, .page {
     img {
-        width: 440px;
-        margin: 0 auto;
+        margin: 0.7rem auto;
         box-shadow: 2px 2px 5px rgba(129,129,129,0.6);
-        @media (min-width: 600px) {
+        @media (min-width: $large-breakpoint) {
             max-width: 300px;
         }
         @media (min-width: 760px) {
             max-width: 480px;
         }
     }
-    @media (min-width: 600px) {
+    @media (min-width: $large-breakpoint) {
         img.float-right {
             float: right;
         }
         img.float-left {
             float: left;
+        }
+    }
+
+    div.image-grid {
+        @media (min-width: $large-breakpoint) {
+            margin: 0 auto;
+            display: grid;
+            grid-gap: .5rem;
+            img {
+                margin: 0;
+                max-width: 100%;
+            }
+            img:nth-child(odd) {
+                grid-column-start: 1;
+                grid-column-end: 2
+            }
+            img:nth-child(even) {
+                grid-column-start: 2;
+                grid-column-end: 3;
+            }
         }
     }
 }
