--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -25,15 +25,15 @@
             margin: 0 auto;
             display: grid;
             grid-gap: .5rem;
-            img {
-                margin: 0;
+            div img {
                 max-width: 100%;
+                margin: 0;
             }
-            img:nth-child(odd) {
+            div:nth-child(odd) {
                 grid-column-start: 1;
                 grid-column-end: 2
             }
-            img:nth-child(even) {
+            div:nth-child(even) {
                 grid-column-start: 2;
                 grid-column-end: 3;
             }
