--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,6 +30,6 @@ $large-breakpoint: 38rem;
 $large-font-size: 20px;
 
 $code-font-family: "Source Code Pro", "Courier New", monospace;
-$code-color: $link-color;
+$code-color: $body-color;
 $code-bg-color: #f9f9f9;
 $code-border-color: #f0f0f0;
