--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -47,7 +47,7 @@ a {
   }
 }
 
-p a {
+article p a {
     color: $body-color;
     text-decoration: none;
     border-bottom: 1px dotted $body-color;
