--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,13 +13,13 @@ $blue: #0a79b6;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: "Libertinus Sans", "Helvetica Neue", Arial, sans-serif;
+$root-font-family: "Fira Sans", "Helvetica Neue", sans-serif;
 $root-font-size: 16.5px;
 $root-line-height: 1.7;
 
 $body-color: #313131;
 $body-bg: #fff;
-$body-font-family: "Libertinus Serif", "Georgia", serif;
+$body-font-family: "Zilla Slab", "Georgia", serif;
 $link-color: #b14444;
 
 $masthead-font-family: "Fira Sans Light", "Helvetica Neue", Arial, sans-serif;
