--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -4,11 +4,10 @@
 
 .masthead {
   font-family: $masthead-font-family;
-  padding-top:    1rem;
-  padding-bottom: 1rem;
+  padding: 1rem 0;
   margin-bottom: 0;
   @media (min-width: $large-breakpoint) {
-      margin-bottom: 0.6rem;
+      margin-bottom: 1rem;
   }
 
   nav {
