--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -3,7 +3,7 @@
 // Headings, body text, lists, and other misc typographic elements.
 
 h1, h2, h3, h4, h5, h6 {
-  margin-bottom: .5rem;
+  margin: 0.5rem 0;
   line-height: 1.25;
   color: #313131;
   text-rendering: optimizeLegibility;
@@ -11,16 +11,18 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 1.8rem;
+  font-weight: normal;
 }
 
 h2 {
   margin-top: 1rem;
   font-size: 1.1rem;
+  font-weight: normal;
 }
 
 h3, h4, h5, h6 {
-  margin-top: 0.5rem;
   font-size: 0.85rem;
+  font-weight: bold;
 }
 
 p {
@@ -112,12 +114,15 @@ a[href^="#fnref:"] {
         position: relative;
         top: .1rem;
         font-family: $code-font-family;
-        font-size: 60%;
+        font-size: 80%;
         border: 1px solid $body-color;
         padding: 0 .15rem;
         &:hover {
             color: $body-bg;
             background-color: $body-color;
+        }
+        @media (min-width: $large-breakpoint) {
+            font-size: 60%;
         }
     }
     &:hover {
