--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,23 +13,21 @@ $blue: #0a79b6;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: "Fira Sans", "Helvetica Neue", sans-serif;
+$root-font-family: "Fira Sans", sans-serif;
 $root-font-size: 16.5px;
 $root-line-height: 1.7;
 
 $body-color: #313131;
 $body-bg: #fff;
-$body-font-family: "Zilla Slab", "Georgia", serif;
+$body-font-family: "Zilla Slab", serif;
 $link-color: #b14444;
-
-$masthead-font-family: "Fira Sans Light", "Helvetica Neue", Arial, sans-serif;
 
 $border-color: #e5e5e5;
 
 $large-breakpoint: 38rem;
 $large-font-size: 20px;
 
-$code-font-family: "Source Code Pro", "Courier New", monospace;
+$code-font-family: source-code-pro, monospace;
 $code-color: $body-color;
 $code-bg-color: #f9f9f9;
 $code-border-color: #f0f0f0;
