--- a/_sass/_social-links.scss
+++ b/_sass/_social-links.scss
@@ -25,14 +25,13 @@
     &:hover:before {
       opacity: 1;
       display: inline-block;
-      transform: translate3d(0,0,0);
       white-space: nowrap;
     }
     &:before {
       content: attr(data-title);
       display: none;
       position: absolute;
-      bottom: -34px;
+      bottom: -27px;
       left: -6px;
       margin: 0 auto;
       font-size: 13px;
@@ -43,15 +42,13 @@
       height: 22px;
       line-height: 22px;
       opacity: 0;
-      transition: opacity 150ms linear, transform 150ms linear, -webkit-transform 150ms linear;
-      transform: translate3d(0,-8px,0);
       z-index: 99;
 }
 
     &:after {
       content: "";
       position: absolute;
-      top: 35px;
+      top: 28px;
       left: 13px;
       width: 0;
       height: 0;
@@ -59,22 +56,17 @@
       border-right: 5px solid transparent;
       border-bottom: 6px solid #222;
       opacity: 0;
-      transition: opacity 150ms linear, transform 150ms linear, -webkit-transform 150ms linear;
-      transform: translate3d(0,-8px,0);
       z-index: 100;
 }
 
     &:hover:after {
       opacity: 1;
-      transform: translate3d(0,0,0);
 }
 }
 
-  .icon {
-      transition: all ease-in-out .2s;
-  }
 }
 
+// Positional adjustments for certain icons
 .icon-mastodon {
     position: relative;
     top: 3px;
