Improvements and fixes to asides styles
* Corrects font color for code and a
* Removes unnecessary styles
* Darkens aside font color overall
* Corrects other style changes caused by this change
* Changes site.url to add the www. subdomain

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -11,7 +11,7 @@ pre {
 code {
   padding: 0 .2em;
   font-size: 83%;
-  color: $code-color;
+  color: inherit;
   background-color: $code-bg-color;
   border-radius: 3px;
   border: 1px solid $code-border-color;
