--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -23,6 +23,14 @@
 .post-title {
   margin-top: 0;
   font-family: $root-font-family;
+  a {
+      border: none;
+      &:hover,
+      &:active {
+          text-decoration: none;
+          border: none;
+      }
+  }
 }
 
 // Meta data line below post title
@@ -45,11 +53,19 @@
 }
 
 .more {
-    display: block;
     font-family: $body-font-family;
     font-style: italic;
     font-size: 1rem;
     margin-top: .1rem;
+    color: $link-color;
+    text-decoration: none;
+    border: none;
+    &:hover,
+    &:active {
+        color: $link-color;
+        border: none;
+        text-decoration: underline;
+    }
 }
 
 
