--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -47,14 +47,15 @@ a {
   }
 }
 
-article p a {
-    color: $body-color;
+article a {
+    color: inherit;
     text-decoration: none;
     border-bottom: 1px dotted $body-color;
     &:hover,
     &:focus {
         text-decoration: none;
         border-bottom: 1px solid $body-color;
+        color: #313131;
     }
 }
 
