--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -46,9 +46,13 @@
 .post-lede {
     font-family: $body-font-family;
     color: $body-color;
-    font-size: 1.1rem;
+    font-size: 1rem;
+    &:active,
     &:hover {
         text-decoration: none;
+    }
+    p {
+        margin-bottom: 0.2rem;
     }
 }
 
@@ -56,7 +60,6 @@
     font-family: $body-font-family;
     font-style: italic;
     font-size: 1rem;
-    margin-top: .1rem;
     color: $link-color;
     text-decoration: none;
     border: none;
@@ -101,4 +104,29 @@
       }
     }
   }
+}
+
+footer {
+    font-size: 0.75rem;
+    a {
+        color: inherit;
+        text-decoration: none;
+        border-bottom: 1px dotted $body-color;
+        &:hover,
+        &:focus {
+            text-decoration: none;
+            border-bottom: 1px solid $body-color;
+            color: #313131;
+        }
+    }
+    .license {
+        display: block;
+        margin: 0 auto;
+    }
+    .cc {
+        max-width: 88px;
+    }
+    .copyright {
+        max-width: 190px;
+    }
 }
