--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -47,7 +47,7 @@ dd {
 
 hr {
   position: relative;
-  margin-bottom: 1.5rem;
+  margin: 1.1rem 0 1.5rem 0;
   border: 1px solid $code-border-color;
 }
 
