--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,4 +13,5 @@
        &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
     </div>
     {% endif %}
+    <a class="backtotop" href="#">back to top</a>
 </footer>
