Fix to footnote reference when active
* Hides border when link is focused

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -121,6 +121,7 @@ a[href^="#fnref:"] {
             font-size: 60%;
         }
     }
+    &:focus,
     &:hover {
         border: none;
     }
@@ -132,7 +133,7 @@ a[href^="#fnref:"] {
     position: relative;
     top: 0.1rem;
     border: 0;
-    &:hover {border: 0;}
+
 }
 
 // List of footnotes
