Makes CC license set in front matter
* Automatically links to correct license and graphic
* Sets front matter defaults

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer>
     <div class="license">
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+        <a rel="license" href="http://creativecommons.org/licenses/{{ page.license }}/4.0/">
             <picture>
-                <source media="(min-width: 608px)" srcset="https://i.creativecommons.org/l/by-sa/4.0/88x31.png">
-                <img src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" />
+                <source media="(min-width: 608px)" srcset="https://i.creativecommons.org/l/{{ page.license }}/4.0/88x31.png">
+                <img src="https://i.creativecommons.org/l/{{ page.license }}/4.0/80x15.png" />
             </picture>
         </a>
     </div>
