Makes link styles more consistent

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -133,7 +133,10 @@ a[href^="#fnref:"] {
     position: relative;
     top: 0.1rem;
     border: 0;
-
+    &:hover {
+        border: none;
+        color: $link-color;
+    }
 }
 
 // List of footnotes
