--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -5,7 +5,7 @@
 
 .pagination {
   overflow: hidden; // clearfix
-  margin: 0 -1.5rem 1rem;
+  // margin: 0 -1.5rem 1rem;
   color: #ccc;
   text-align: center;
 }
@@ -13,39 +13,43 @@
 // Pagination items can be `span`s or `a`s
 .pagination-item {
   display: block;
-  padding: 1rem;
-  border: solid #eee;
-  border-width: 1px 0;
+  // padding: 1rem;
+  // border: solid #eee;
+  // border-width: 1px 0;
 
   &:first-child {
-    margin-bottom: -1px;
+    // margin-bottom: -1px;
   }
 }
 
 // Only provide a hover state for linked pagination items
-a.pagination-item:hover {
-  background-color: #f5f5f5;
+a.pagination-item {
+    color: $body-color;
+    &:hover {
+        // background-color: #f5f5f5;
+        color: $link-color;
+    }
 }
 
 @media (min-width: 30em) {
   .pagination {
-    margin: 3rem 0;
+    // margin: 3rem 0;
   }
 
   .pagination-item {
     float: left;
     width: 50%;
-    border-width: 1px;
+    // border-width: 1px;
 
     &:first-child {
-      margin-bottom: 0;
-      border-top-left-radius:    4px;
-      border-bottom-left-radius: 4px;
+      // margin-bottom: 0;
+      // border-top-left-radius:    4px;
+      // border-bottom-left-radius: 4px;
     }
     &:last-child {
-      margin-left: -1px;
-      border-top-right-radius:    4px;
-      border-bottom-right-radius: 4px;
+      // margin-left: -1px;
+      // border-top-right-radius:    4px;
+      // border-bottom-right-radius: 4px;
     }
   }
 }
